cambios del viernes pre modificacion de proyectos en los comprobantes

--- a/NubeBooks/Views/Admin/Entidad.cshtml
+++ b/NubeBooks/Views/Admin/Entidad.cshtml
@@ -13,7 +13,23 @@
     <script type="text/javascript">
         $(function () {
             $('.miselect2').select2();
+
+            $('#fechaInicio').datepicker({ format: 'dd/mm/yyyy' });
+            $('#fechaFin').datepicker({ format: 'dd/mm/yyyy' });
         });
+
+        $("input#exportar").click(function () {
+            window.location.href = exportarDetalle($('#fechaInicio').val(), $('#fechaFin').val());
+            $('#modal-form-exportar').modal('toggle');
+        });
+
+        function exportarDetalle(fechaInicio, fechaFin) {
+            var FechaInicio = fechaInicio.split("/"); FechaInicio = FechaInicio[2] + "/" + FechaInicio[1] + "/" + FechaInicio[0];
+            var FechaFin = fechaFin.split("/"); FechaFin = FechaFin[2] + "/" + FechaFin[1] + "/" + FechaFin[0];
+            var jsIdEntidad = '@Model.IdEntidadResponsable';
+
+            return miBaseUrl + "/ExportarComprobantesAsociados_EnEntidad/?idEntidad=" + jsIdEntidad + "&" + "FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
+        }
 
         function CheckNumericValue(e) {
             var key = e.which ? e.which : e.keyCode;
@@ -282,38 +298,98 @@ else { cadena = "Actualizar"; }
     @if (Model != null && Model.IdEntidadResponsable > 0)
     {
         <div class="line line-dashed line-lg pull-in"></div>
-        <div class="panel panel-default">
-            <div class="panel-heading">Comprobantes Asociados</div>
-            <table st-table="rowCollectionBasic" class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <th style="width:10%">Fecha</th>
-                        <th style="width:20%">Documento</th>
-                        <th style="width:20%">Número</th>
-                        <th style="width:20%">Proyecto</th>
-                        <th style="width:20%">Modalidad</th>
-                        <th class="text-center" style="width:10%">Monto Total</th>
-                        @*<th style="width:8%"></th>*@
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (((List<ComprobanteDTO>)ViewBag.lstComprobantes).Count > 0)
-                    {
-                        foreach (var item in (List<ComprobanteDTO>)ViewBag.lstComprobantes)
-                        {
-                            <tr>
-                                <td>@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
-                                <td>@item.NombreTipoDocumento</td>
-                                <td>@item.NroDocumento</td>
-                                <td>@item.NombreProyecto</td>
-                                @{ var eColor = item.IdTipoComprobante == 1 ? "#27c24c" : "red"; }
-                                <td style="color:@(eColor)">@(item.IdTipoComprobante == 1 ? "Ingreso" : "Egreso")</td>
-                                <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
-                            </tr>
-                        }
-                    }
-                </tbody>
-            </table>
+        <div class="bg-light lter b-b wrapper-md">
+            <button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l open-modal" data-toggle="modal" data-target="#modal-form-exportar"><i class="fa fa-cloud-download"></i>Exportar</button>
+            <h1 class="m-n font-thin h4">Comprobantes Asociados</h1>
         </div>
-    }
+            <div class="panel panel-default">
+                <div class="table-responsive">
+                    <table ui-jq="dataTable" ui-options="{
+    oLanguage: {
+        sLengthMenu: 'Mostrar _MENU_ registros',
+        sSearch: 'Buscar:',
+        sZeroRecords: 'No se encontraron registros que cumplan los términos de búsqueda.',
+        sLoadingRecords: 'Cargando...',
+        sInfo: 'Mostrando _START_-_END_ de _TOTAL_ registros.',
+        sInfoEmpty: 'Mostrando _END_ de _TOTAL_ registros',
+        sInfoFiltered: '(filtrados de un total _MAX_).',
+        sEmptyTable: 'No hay información disponible para mostrar.',
+        sProcessing: 'DataTables is currently busy',
+        oPaginate: {
+            sPrevious: 'Anterior',
+            sNext: 'Siguiente'
+        }
+    },
+    pageLength: 25,
+}" class="table table-striped b-t b-b dataTable">
+                        <thead>
+                            <tr>
+                                <th style="width:10%">Fecha</th>
+                                <th style="width:20%">Modalidad</th>
+                                <th style="width:20%">Documento</th>
+                                <th style="width:20%">Número</th>
+                                <th style="width:20%">Proyecto</th>
+                                <th class="text-center" style="width:10%">Monto Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @if (((List<ComprobanteDTO>)ViewBag.lstComprobantes).Count > 0)
+                            {
+                                foreach (var item in (List<ComprobanteDTO>)ViewBag.lstComprobantes)
+                                {
+                                    <tr>
+                                        <td>@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
+                                        @{ var eColor = item.IdTipoComprobante == 1 ? "#27c24c" : "red"; }
+                                        <td style="color:@(eColor)">@(item.IdTipoComprobante == 1 ? "Ingreso" : "Egreso")</td>
+                                        <td>@item.NombreTipoDocumento</td>
+                                        <td>@item.NroDocumento</td>
+                                        <td>@item.NombreProyecto</td>
+                                        <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
+                                    </tr>
+                                                }
+                                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            }
+</div>
+
+<div class="modal fade modal-task" id="modal-form-exportar">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Exportar Comprobantes Asociados</h4>
+            </div>
+            <div class="modal-body">
+                <form class="element" name="element">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label for="fechaInicio">Fecha Inicio:</label>
+                            <div class="form-group">
+                                <div class="input-group date">
+                                    <input type="text" name="fechaInicio" id="fechaInicio" readonly="readonly" class="form-control" value="@(new DateTime(DateTime.Now.Year, 1, 1).ToString("dd/MM/yyyy"))">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="fechaFin">Fecha Fin:</label>
+                            <div class="form-group">
+                                <div class="input-group date">
+                                    <input type="text" name="fechaFin" id="fechaFin" readonly="readonly" class="form-control" value="@(new DateTime(DateTime.Now.Year, 12, 31).ToString("dd/MM/yyyy"))">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <input class="btn btn-success" type="submit" value="Exportar" id="exportar">
+            </div>
+        </div>
+    </div>
 </div>
