ajustes de vista

--- a/NubeBooks/Views/Admin/Entidad.cshtml
+++ b/NubeBooks/Views/Admin/Entidad.cshtml
@@ -325,11 +325,11 @@ else { cadena = "Actualizar"; }
                         <thead>
                             <tr>
                                 <th style="width:10%">Fecha</th>
-                                <th style="width:20%">Modalidad</th>
-                                <th style="width:20%">Documento</th>
-                                <th style="width:20%">Número</th>
-                                <th style="width:20%">Proyecto</th>
-                                <th class="text-center" style="width:10%">Monto Total</th>
+                                <th style="width:15%">Modalidad</th>
+                                <th style="width:15%">Documento</th>
+                                <th style="width:15%">Número</th>
+                                <th style="width:15%">Proyecto</th>
+                                <th >Monto Total</th>
                             </tr>
                         </thead>
                         <tbody>
