ajuste de vista en entidad

--- a/NubeBooks/Views/Admin/Entidad.cshtml
+++ b/NubeBooks/Views/Admin/Entidad.cshtml
@@ -329,7 +329,7 @@ else { cadena = "Actualizar"; }
                                 <th style="width:15%">Documento</th>
                                 <th style="width:15%">Número</th>
                                 <th style="width:15%">Proyecto</th>
-                                <th >Monto Total</th>
+                                <th class="text-center" >Monto Total</th>
                             </tr>
                         </thead>
                         <tbody>
