--- a/NubeBooks/Views/Admin/Proyecto.cshtml
+++ b/NubeBooks/Views/Admin/Proyecto.cshtml
@@ -95,11 +95,11 @@ else { cadena = "Actualizar"; }
                     <thead>
                         <tr>
                             <th style="width:10%">Fecha</th>
-                            <th style="width:20%">Modalidad</th>
-                            <th style="width:20%">Documento</th>
-                            <th style="width:20%">Número</th>
-                            <th style="width:20%">Cliente</th>
-                            <th class="text-center" style="width:10%">Monto Total</th>
+                            <th style="width:18%">Modalidad</th>
+                            <th style="width:18%">Documento</th>
+                            <th style="width:18%">Número</th>
+                            <th style="width:18%">Cliente</th>
+                            <th class="text-right">Monto Total</th>
                         </tr>
                     </thead>
                     <tbody>
